# Spooky

./: .gitignore  LICENSE  QUBOBuilder.py  README.md  ROADMAP.md  map.py  pathFormulation.py  pyproject.toml  qubo.ipynb  qubo.py  requirements.txt  visualizer.py
benchmark/: benchmark.py
config/: config.yaml  hdf5parser.py  materials.yaml  parser.py
fastapi_app/: api.py  config_api.py
fastapi_app/profiles/: models.py  robot.py
quantum/: .gitignore  QUBOBuilder.py  README.md  map.py  pathFormulation.py  qaoa.ipynb  qubo.ipynb  qubo.py  qubo_cli.py  roadmap.md  robotConfiguration.py  visualizer.py
quantum/benchmark/: README.md  __init__.py  benchmark.py
quantum/builder/: GraphQUBO.py  QUBOBuilder.py  README.md  __init__.py  base_qubo.py
quantum/config/: README.md  config.yaml  hdf5parser.py  materials.yaml  parser.py
quantum/demos/: 01_quickstart.py  02_manual_setup.py  03_visualization.py  04_multi_robot.py  05_hardware_qiskit.py  06_advanced_features.py  HARDWARE_SETUP.md  README.md
quantum/maps/: README.md  generate_all_maps.py  map_generator.py  yaml2HDF5.py
quantum/maps/synthetic/1000x1000/: no_obs1000x1000.yaml
quantum/maps/synthetic/100x100/: no_obs100x100.yaml
quantum/maps/synthetic/10x10/: no_obs10x10.yaml  obs10x10_easy.yaml  obs10x10_hard.yaml  obs10x10_medium.yaml
quantum/maps/synthetic/2x2/: no_obs2x2.yaml
quantum/maps/synthetic/3x2/: no_obs3x2.yaml
quantum/maps/synthetic/3x3/: no_obs3x3.yaml  no_obs3x3_elev.yaml  no_obs3x3_mix.yaml  no_obs3x3_ter.yaml  no_obs3x3ter_alt.yaml  obs3x3_standard.yaml
quantum/maps/synthetic/50x50/: no_obs50x50.yaml  obs50x50_medium.yaml
quantum/maps/synthetic/5x5/: no_obs5x5.yaml  obs5x5_easy.yaml  obs5x5_hard.yaml  obs5x5_medium.yaml
quantum/paper/: README.md  __init__.py  classical_mapf.py  generate_plots.py  plot_comparison.py  references.bib
quantum/solvers/: DWave_solver.py  Pennylane_solver.py  README.md  __init__.py  base_solver.py  solver_factory.py
quantum/utils/: README.md  logger.py  paths.py  validation.py
ros2_ws/: .gitignore
ros2_ws/enhanced_map/: package.xml  setup.cfg  setup.py
ros2_ws/enhanced_map/enhanced_map/: helper_functions.py  map_publisher.py
ros2_ws/enhanced_map/launch/: map_publisher.launch.py
ros2_ws/quantum_planner_server/: CMakeLists.txt  package.xml
ros2_ws/quantum_planner_server/config/: quantum_goal.yaml
ros2_ws/quantum_planner_server/include/quantum_planner_server/: ClientNode.hpp  ServerNode.hpp
ros2_ws/quantum_planner_server/launch/: client_node.launch.py
ros2_ws/quantum_planner_server/maps/: no_obs3x3_mix.h5
ros2_ws/quantum_planner_server/src/: client_main.cpp  server_main.cpp
ros2_ws/quantum_planner_server/src/nodes/: ClientNode.cpp  ServerNode.cpp
ros2_ws/quantum_robotics_interface/: CMakeLists.txt  package.xml
ros2_ws/quantum_robotics_interface/action/: ComputeQuantumPath.action
ros2_ws/quantum_robotics_interface/msg/: QuantumMetadata.msg  QuantumPlannerParameters.msg  QuantumPlannerSelector.msg  QuantumPlannerStatus.msg
ros2_ws/quantum_robotics_interface/srv/: EstimateQuantumResources.srv  GetQuantumPlannerInfo.srv
solvers/: DWave_solver.py  Pennylane_qa.py  Pennylane_solver.py  README.md  __init__.py  base_solver.py  solver_factory.py
